@@ -66,4 +66,9 @@ module Enumerable
       accum
     end
   end
+  
+  # Returns true if the collection has more than 1 element. Functionally equivalent to collection.size > 1.
+  def several?
+    size > 1
+  end
 end
